env variables files, new rule 'show' at makefile

--- a/acceptance_tests/Makefile
+++ b/acceptance_tests/Makefile
@@ -8,6 +8,9 @@ all: prepare run
 run:
 	npm test -- --passWithNoTests --detectOpenHandles --verbose
 
+show:
+	SHOW_BROWSER=true npm test -- --passWithNoTests --detectOpenHandles --verbose
+
 prepare: extract_chrome createDirs install_
 
 reinstall:
