--- a/acceptance_tests/.gitignore
+++ b/acceptance_tests/.gitignore
@@ -1,3 +1,4 @@
+# directories
 .idea/*
 chrome/*
 downloads/*
@@ -6,4 +7,6 @@ object_structures/*
 output/*
 screenshots/*
 uml_diagrams/*.asta.lock
+# files
+login_data.json
 package-lock.json
