makefile init rule receiving login data args

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -1,3 +1,6 @@
 SHOW_BROWSER=false
-EMAIL=proflaviamat@gmail.com
-PASSWORD=Teste123
+#otus login data
+EMAIL=empty
+DEFAULT_EMAIL=proflaviamat@gmail.com
+PASSWORD=empty
+DEFAULT_PASSWORD=Teste123
