--- a/acceptance_tests/Makefile
+++ b/acceptance_tests/Makefile
@@ -1,9 +1,19 @@
+# otus login data
+EMAIL=empty
+PASSWORD=empty
+# paths
 DOWNLOADS_DIR_PATH = downloads
 OUTPUT_DIR_PATH = output
 SCREENSHOT_DIR_PATH = $(OUTPUT_DIR_PATH)/screenshots
 TEST_RESULTS_DIR_PATH = $(OUTPUT_DIR_PATH)/test_results
 
-all: prepare run
+# main rules
+
+init:
+	extract_chrome
+	createDirs
+	install_
+	set_login_data
 
 run:
 	npm test -- --passWithNoTests --detectOpenHandles --verbose
@@ -11,12 +21,15 @@ run:
 show:
 	SHOW_BROWSER=true npm test -- --passWithNoTests --detectOpenHandles --verbose
 
-prepare: extract_chrome createDirs install_
-
 reinstall:
 	sudo rm -rf node_modules
 	sudo rm package-lock.json
 	install_
+
+# helper rules
+
+set_login_data:
+	EMAIL=$(EMAIL) PASSWORD=$(PASSWORD) npm start
 
 extract_chrome:
 	tar xzf chrome.tar.gz
@@ -30,5 +43,3 @@ createDirs:
 install_:
 	sudo npm set PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 	sudo npm install --unsafe-perm=true
-
-
