login data to data dir, use env login data in ParentLib login method

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -1,6 +1,9 @@
 SHOW_BROWSER=false
 #otus login data
 EMAIL=empty
-DEFAULT_EMAIL=proflaviamat@gmail.com
+DEFAULT_EMAIL=default_email
 PASSWORD=empty
-DEFAULT_PASSWORD=Teste123
+DEFAULT_PASSWORD=default_password
+
+#
+LOGIN_FILE_PATH = './data/login_data.json'
