pass all constant at mainConstants.js to .env file

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -1,9 +1,29 @@
-SHOW_BROWSER=false
-#otus login data
-EMAIL=empty
-DEFAULT_EMAIL=default_email
-PASSWORD=empty
-DEFAULT_PASSWORD=default_password
+# Otus login data
+EMAIL = empty
+DEFAULT_EMAIL = default_email
+PASSWORD = empty
+DEFAULT_PASSWORD = default_password
 
-#
-LOGIN_FILE_PATH = './data/login_data.json'
+# Browser
+SHOW_BROWSER = false
+CHROME_EXECUTABLE_LOCAL_PATH = /chrome/chrome
+WINDOW_WIDTH = 1920
+WINDOW_HEIGHT = 1080
+SLOW_TIME_MILLISEC_TO_FOLLOW_INTERACTION = 20
+
+# Paths
+DOWNLOADS_LOCAL_DIR_PATH = /downloads
+OUTPUT_LOCAL_DIR_PATH = /output
+SCREENSHOT_LOCAL_DIR_PATH = /output/screenshots
+TEST_RESULTS_LOCAL_DIR_PATH = /output/test_results
+LOGIN_DATA_FILE_LOCAL_PATH  =  /data/login_data.json
+
+# Timeout
+TIMEOUT_PER_TEST = 60000
+LOAD_PAGE_TIMEOUT = 5000
+WAIT_FOR_SELECTOR_TIMEOUT = 5000
+DOWNLOAD_TIMEOUT = 5000
+JSON_DOWNLOAD_TIMEOUT = 3000
+
+# Debug
+LOG_NAVIGATION_ACTIONS=false
