dialog refactor, more thing on activity report tests

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -5,7 +5,7 @@ PASSWORD = empty
 DEFAULT_PASSWORD = default_password
 
 # Browser
-SHOW_BROWSER = false
+SHOW_BROWSER = true
 CHROME_EXECUTABLE_LOCAL_PATH = /chrome/chrome
 WINDOW_WIDTH = 1920
 WINDOW_HEIGHT = 1080
@@ -26,4 +26,4 @@ DOWNLOAD_TIMEOUT = 5000
 JSON_DOWNLOAD_TIMEOUT = 3000
 
 # Debug
-LOG_NAVIGATION_ACTIONS=false
+LOG_NAVIGATION_ACTIONS = true
