main page urls in custom env file

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -1,3 +1,7 @@
+# Main Pages
+OTUS_MAIN_PAGE = http://localhost:3000/otus/app/
+OTUS_STUDIO_MAIN_PAGE = http://localhost:3000/otus-studio/app/
+
 # Otus login data
 EMAIL = empty
 DEFAULT_EMAIL = default_email
