template info as input, README

--- a/ehr2otus/package.json
+++ b/ehr2otus/package.json
@@ -4,11 +4,12 @@
   "description": "EHR to Otus Template Conversion",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "parser": "node main.js"
   },
-  "author": "",
+  "author": "Flávia Pereira",
   "license": "ISC",
   "dependencies": {
+    "custom-env": "^1.0.2",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "load-json-file": "^6.2.0",
