change Otus main page url in custom env file

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -1,5 +1,5 @@
 # Main Pages
-OTUS_MAIN_PAGE = http://localhost:3000/otus/app/
+OTUS_MAIN_PAGE = http://localhost:3000/
 OTUS_STUDIO_MAIN_PAGE = http://localhost:3000/otus-studio/app/
 
 # Otus login data
