--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -1,6 +1,7 @@
-# Main Pages
-OTUS_MAIN_PAGE = http://localhost:3000/
-OTUS_STUDIO_MAIN_PAGE = http://localhost:3000/otus-studio/app/
+# Main Page Urls
+OTUS_URL = http://localhost:3000
+OTUS_DOMAIN_URL = http://localhost:3000
+OTUS_STUDIO_URL = http://localhost:3000/otus-studio/app/
 
 # Otus login data
 EMAIL = empty
