--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -14,7 +14,7 @@ SHOW_BROWSER = true
 CHROME_EXECUTABLE_LOCAL_PATH = /chrome/chrome
 WINDOW_WIDTH = 1920
 WINDOW_HEIGHT = 1080
-SLOW_TIME_MILLISEC_TO_FOLLOW_INTERACTION = 10
+SLOW_TIME_MILLISEC_TO_FOLLOW_INTERACTION = 30
 
 # Paths
 DOWNLOADS_LOCAL_DIR_PATH = /downloads
@@ -31,4 +31,4 @@ DOWNLOAD_TIMEOUT = 5000
 JSON_DOWNLOAD_TIMEOUT = 3000
 
 # Debug
-LOG_NAVIGATION_ACTIONS = true
+LOG_NAVIGATION_ACTIONS = false
