change OTUS_URL env var default value to use otus-frontend container

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -1,5 +1,5 @@
 # Main Page Urls
-OTUS_URL = http://localhost:3000
+OTUS_URL = http://localhost:51001/otus/
 OTUS_DOMAIN_URL = http://localhost:3000
 OTUS_STUDIO_URL = http://localhost:3000/otus-studio/app/
 
