change run commands to npm run

--- a/acceptance_tests/Makefile
+++ b/acceptance_tests/Makefile
@@ -1,6 +1,7 @@
-# otus login data
-EMAIL=empty
-PASSWORD=empty
+# OTUS login data
+OTUS_EMAIL=empty
+OTUS_PASSWORD=empty
+
 # paths
 DOWNLOADS_DIR_PATH = downloads
 OUTPUT_DIR_PATH = output
@@ -14,19 +15,13 @@ init: install_ set_login_data
 	mkdir -p $(SCREENSHOT_DIR_PATH)
 	mkdir -p $(TEST_RESULTS_DIR_PATH)
 
-run:
-	SHOW_BROWSER=false npm test -- --passWithNoTests --detectOpenHandles --verbose
-
-show:
-	SHOW_BROWSER=true npm test -- --passWithNoTests --detectOpenHandles --verbose
-
 reinstall:
 	sudo rm -rf node_modules
 	sudo rm package-lock.json
 	install_
 
 set_login_data:
-	EMAIL=$(EMAIL) PASSWORD=$(PASSWORD) npm start
+	OTUS_EMAIL=$(EMAIL) OTUS_PASSWORD=$(PASSWORD) npm start
 
 install_:
 	sudo npm set PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
