set login data by terminal input

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -4,10 +4,16 @@ OTUS_DOMAIN_URL = http://localhost:3000
 OTUS_STUDIO_URL = http://localhost:3000/otus-studio/app/
 
 # Otus login data
-EMAIL = empty
-DEFAULT_EMAIL = default_email
-PASSWORD = empty
-DEFAULT_PASSWORD = default_password
+OTUS_EMAIL = empty
+OTUS_DEFAULT_EMAIL = default_email
+OTUS_PASSWORD = empty
+OTUS_DEFAULT_PASSWORD = default_password
+
+# Otus Domain login data (default values are Otus login data values)
+OTUS_DOMAIN_EMAIL = empty1
+OTUS_DOMAIN_DEFAULT_EMAIL = empty2
+OTUS_DOMAIN_PASSWORD = empty3
+OTUS_DOMAIN_DEFAULT_PASSWORD = empty4
 
 # Browser
 SHOW_BROWSER = true
