fix otus domain login data in env file

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -10,10 +10,10 @@ OTUS_PASSWORD = empty
 OTUS_DEFAULT_PASSWORD = default_password
 
 # Otus Domain login data (default values are Otus login data values)
-OTUS_DOMAIN_EMAIL = empty1
-OTUS_DOMAIN_DEFAULT_EMAIL = empty2
-OTUS_DOMAIN_PASSWORD = empty3
-OTUS_DOMAIN_DEFAULT_PASSWORD = empty4
+OTUS_DOMAIN_EMAIL = empty
+OTUS_DOMAIN_DEFAULT_EMAIL = default_email
+OTUS_DOMAIN_PASSWORD = empty
+OTUS_DOMAIN_DEFAULT_PASSWORD = default_password
 
 # Browser
 SHOW_BROWSER = true
