change SHOW_BROWSER default value to false

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -16,7 +16,7 @@ OTUS_DOMAIN_PASSWORD = empty
 OTUS_DOMAIN_DEFAULT_PASSWORD = default_password
 
 # Browser
-SHOW_BROWSER = true
+SHOW_BROWSER = false
 CHROME_EXECUTABLE_LOCAL_PATH = /chrome/chrome
 WINDOW_WIDTH = 1920
 WINDOW_HEIGHT = 1080
