preenchimento dos 3 input

--- a/acceptance_tests/.env.staging
+++ b/acceptance_tests/.env.staging
@@ -1,5 +1,6 @@
 # Main Page Urls
-OTUS_URL = http://localhost:51001/otus/
+OTUS_URL = https://www.sicredi.com.br/html/ferramenta/simulador-investimento-poupanca/
+//OTUS_URL = http://otus.hmg.ccem.ufrgs.br
 OTUS_DOMAIN_URL = http://localhost:3000
 OTUS_STUDIO_URL = http://localhost:3000/otus-studio/app/
 
